--- a/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,9 +87,6 @@ LastLevel=/Game/Map/MainMap1-1
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Character/PunkBP.PunkBP
-OpenAssetsAtExit=/Game/Blueprints/Brique/ChampiBP.ChampiBP
-OpenAssetsAtExit=/Game/Blueprints/Character/GrandBP.GrandBP
-OpenAssetsAtExit=/Game/Blueprints/Brique/BriqueBP.BriqueBP
 
 [MRU]
 MRUItem0=/Game/Map/MainMap1-1
@@ -1043,26 +1040,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Brique/BriqueBP
-MRUItem1=/Game/Blueprints/Character/GrandBP
-MRUItem2=/Game/Blueprints/Brique/ChampiBP
-MRUItem3=/Game/Blueprints/Character/PunkBP
-MRUItem4=/Game/Blueprints/Character/CollisionCamera
-MRUItem5=/Game/Blueprints/Character/CollisionBox
-MRUItem6=/Game/Blueprints/Brique/SpecialbriqueBP
-MRUItem7=/Game/Blueprints/Brique/NewBlueprint
-MRUItem8=/Game/Map/1-1Map
-MRUItem9=/Game/Blueprints/Character/Test
-MRUItem10=/Game/Blueprints/Character/ChampiBP
-MRUItem11=/Game/Blueprints/TestBP
-MRUItem12=/Game/Blueprints/test
-MRUItem13=/Game/Blueprints/Character/NewBlueprint
-MRUItem14=/Game/Blueprints/Character/ReplacePunkBP
-MRUItem15=/Game/Blueprints/MainGameMode
-MRUItem16=/Game/Blueprints/Brique/SpecialBriqueMaterial
-MRUItem17=/Game/Blueprints/Brique/BriqueBP_Child
-MRUItem18=/Game/Blueprints/Brique/MoveBrique
-MRUItem19=/Game/Map/MarioBrosCamera
+MRUItem0=/Game/Blueprints/Character/CameraDead
+MRUItem1=/Game/Blueprints/Character/CollisionCamera
+MRUItem2=/Game/Blueprints/Brique/BriqueBP
+MRUItem3=/Game/Blueprints/Character/GrandBP
+MRUItem4=/Game/Blueprints/Brique/ChampiBP
+MRUItem5=/Game/Blueprints/Character/PunkBP
+MRUItem6=/Game/Blueprints/Character/CollisionBox
+MRUItem7=/Game/Blueprints/Brique/SpecialbriqueBP
+MRUItem8=/Game/Blueprints/Brique/NewBlueprint
+MRUItem9=/Game/Map/1-1Map
+MRUItem10=/Game/Blueprints/Character/Test
+MRUItem11=/Game/Blueprints/Character/ChampiBP
+MRUItem12=/Game/Blueprints/TestBP
+MRUItem13=/Game/Blueprints/test
+MRUItem14=/Game/Blueprints/Character/NewBlueprint
+MRUItem15=/Game/Blueprints/Character/ReplacePunkBP
+MRUItem16=/Game/Blueprints/MainGameMode
+MRUItem17=/Game/Blueprints/Brique/SpecialBriqueMaterial
+MRUItem18=/Game/Blueprints/Brique/BriqueBP_Child
+MRUItem19=/Game/Blueprints/Brique/MoveBrique
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1073,15 +1070,15 @@ Object=
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
-StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
+StaticMeshComponent=
+MeshComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1090,11 +1087,11 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 SpecialbriqueBP_C=
 BriqueBP_C=
-ChampiBP_C=
-PaperCharacter=
-Character=
-Pawn=
-PunkBP_C=
+ChampiBP_C="\"Object.Eat?\" "
+PaperCharacter="\"Object.SetNumber\" "
+Character="\"Object.SetNumber\" "
+Pawn="\"Object.SetNumber\" "
+PunkBP_C="\"Object.SetNumber\" "
 PaperFlipbookComponent="\"Object.Collision.BodyInstance\" "
 
 [AssetEditorToolkitTabLocation]
@@ -1116,6 +1113,7 @@ PaperFlipbookComponent="\"Object.Collision.BodyInstance\" "
 /Game/Blueprints/Character/CollisionCamera.CollisionCamera=0
 /Game/Blueprints/Brique/SpecialbriqueBP.SpecialbriqueBP=0
 /Game/Blueprints/Character/GrandBP.GrandBP=0
+/Game/Blueprints/Brique/ChampiBP.ChampiBP=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Character/GrandBP.GrandBP;
@@ -1192,7 +1190,7 @@ CurrentScalingGridSize=6
 
 [RootWindow]
 ScreenPosition=X=150.400 Y=0.000
-WindowSize=X=1390.400 Y=808.000
+WindowSize=X=1392.000 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
