--- a/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,6 +86,7 @@ LastLevel=/Game/Map/MainMap1-1
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/Ennemy/Goomba.Goomba
 OpenAssetsAtExit=/Game/Blueprints/Character/PunkBP.PunkBP
 
 [MRU]
@@ -997,6 +998,20 @@ GrandBP_C.Collision=True
 GrandBP_C.Actor=True
 GrandBP_C.Input=True
 GrandBP_C.TransformCommon=True
+Goomba_C.Tick=True
+Goomba_C.Replication=True
+Goomba_C.Rendering=True
+Goomba_C.Collision=True
+Goomba_C.Actor=True
+Goomba_C.Input=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
+Goomba_C.TransformCommon=True
+K2Node_SetFieldsInStruct.PinOptions=True
+Goomba_C.Default=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1020,7 +1035,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Character
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Ennemy
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1040,45 +1055,45 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Character/CameraDead
-MRUItem1=/Game/Blueprints/Character/CollisionCamera
-MRUItem2=/Game/Blueprints/Brique/BriqueBP
-MRUItem3=/Game/Blueprints/Character/GrandBP
-MRUItem4=/Game/Blueprints/Brique/ChampiBP
-MRUItem5=/Game/Blueprints/Character/PunkBP
-MRUItem6=/Game/Blueprints/Character/CollisionBox
-MRUItem7=/Game/Blueprints/Brique/SpecialbriqueBP
-MRUItem8=/Game/Blueprints/Brique/NewBlueprint
-MRUItem9=/Game/Map/1-1Map
-MRUItem10=/Game/Blueprints/Character/Test
-MRUItem11=/Game/Blueprints/Character/ChampiBP
-MRUItem12=/Game/Blueprints/TestBP
-MRUItem13=/Game/Blueprints/test
-MRUItem14=/Game/Blueprints/Character/NewBlueprint
-MRUItem15=/Game/Blueprints/Character/ReplacePunkBP
-MRUItem16=/Game/Blueprints/MainGameMode
-MRUItem17=/Game/Blueprints/Brique/SpecialBriqueMaterial
-MRUItem18=/Game/Blueprints/Brique/BriqueBP_Child
-MRUItem19=/Game/Blueprints/Brique/MoveBrique
+MRUItem0=/Game/Blueprints/Character/KillMaterial
+MRUItem1=/Game/Blueprints/Character/PunkBP
+MRUItem2=/Game/Blueprints/Character/CollisionCamera
+MRUItem3=/Game/Blueprints/Brique/ChampiBP
+MRUItem4=/Game/Blueprints/Brique/SpecialbriqueBP
+MRUItem5=/Game/Blueprints/Ennemy/Goomba
+MRUItem6=/Game/Blueprints/Ennemy/Ennemymaterial
+MRUItem7=/Game/Blueprints/Character/CameraDead
+MRUItem8=/Game/Blueprints/Brique/BriqueBP
+MRUItem9=/Game/Blueprints/Character/GrandBP
+MRUItem10=/Game/Blueprints/Character/CollisionBox
+MRUItem11=/Game/Blueprints/Brique/NewBlueprint
+MRUItem12=/Game/Map/1-1Map
+MRUItem13=/Game/Blueprints/Character/Test
+MRUItem14=/Game/Blueprints/Character/ChampiBP
+MRUItem15=/Game/Blueprints/TestBP
+MRUItem16=/Game/Blueprints/test
+MRUItem17=/Game/Blueprints/Character/NewBlueprint
+MRUItem18=/Game/Blueprints/Character/ReplacePunkBP
+MRUItem19=/Game/Blueprints/MainGameMode
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
-BoxComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1087,12 +1102,13 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 SpecialbriqueBP_C=
 BriqueBP_C=
-ChampiBP_C="\"Object.Eat?\" "
-PaperCharacter="\"Object.SetNumber\" "
-Character="\"Object.SetNumber\" "
-Pawn="\"Object.SetNumber\" "
-PunkBP_C="\"Object.SetNumber\" "
+ChampiBP_C=
+PaperCharacter="\"Object.GoombaBP\" "
+Character="\"Object.GoombaBP\" "
+Pawn="\"Object.GoombaBP\" "
+PunkBP_C="\"Object.GoombaBP\" "
 PaperFlipbookComponent="\"Object.Collision.BodyInstance\" "
+Goomba_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Map/1-1Map.1-1Map=0
@@ -1114,8 +1130,11 @@ PaperFlipbookComponent="\"Object.Collision.BodyInstance\" "
 /Game/Blueprints/Brique/SpecialbriqueBP.SpecialbriqueBP=0
 /Game/Blueprints/Character/GrandBP.GrandBP=0
 /Game/Blueprints/Brique/ChampiBP.ChampiBP=0
+/Game/Blueprints/Ennemy/Ennemymaterial.Ennemymaterial=0
+/Game/Blueprints/Character/KillMaterial.KillMaterial=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Ennemy/Goomba.Goomba;
 RecentlyPlaced=/Game/Blueprints/Character/GrandBP.GrandBP;
 RecentlyPlaced=/Game/Blueprints/Brique/NewBlueprint.NewBlueprint;
 RecentlyPlaced=/Game/Blueprints/Brique/BriqueBP.BriqueBP;
@@ -1135,7 +1154,6 @@ RecentlyPlaced=/Game/Blueprints/Character/SmartCameraBis.SmartCameraBis;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/Character/CAME.CAME;
 RecentlyPlaced=/Game/Blueprints/Character/SmartCamera.SmartCamera;
-RecentlyPlaced=/Game/Blueprints/Character/Punk.Punk;
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1190,7 +1208,7 @@ CurrentScalingGridSize=6
 
 [RootWindow]
 ScreenPosition=X=150.400 Y=0.000
-WindowSize=X=1392.000 Y=808.000
+WindowSize=X=1396.800 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1207,7 +1225,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/pansu/OneDrive/Documents/Unreal Projects/SuperPunkBros/Content/Map
+UNR=../../../../../../Users/pansu/OneDrive/Documents/Unreal Projects/SuperPunkBros2/SuperPunkBros/Content/Map
 BRUSH=../../../../../../Users/pansu/OneDrive/Documents/Unreal Projects/SuperPunkBros/Content/
 FBX=../../../../../../Users/pansu/OneDrive/Documents/Unreal Projects/SuperPunkBros/Content/
 FBXAnim=../../../../../../Users/pansu/OneDrive/Documents/Unreal Projects/SuperPunkBros/Content/
@@ -2192,7 +2210,7 @@ PropertyWrapper=BoxComponent.Collision.Collision,BoxComponent.Physics.Constraint
 K2Node_VariableSet=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PunkBP_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-MovementComponent=
+MovementComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 SpecialbriqueBP_C=
 InterpToMovementComponent=
 CapsuleComponent=
@@ -2201,10 +2219,11 @@ SceneComponent=
 NewBlueprint_C=
 DatasmithAreaLightActor=
 test_C=
-StaticMeshComponent=
+StaticMeshComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TestBP_C=
 ChampiBP_C=
 CharacterMovementComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+Goomba_C=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
