--- a/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -84,10 +84,10 @@ LastExecutedPlayModeType=PlayMode_InEditorFloating
 LastLevel=/Game/Map/MainMap1-1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Ennemy/Goomba.Goomba
 OpenAssetsAtExit=/Game/Blueprints/Character/PunkBP.PunkBP
+OpenAssetsAtExit=/Game/Blueprints/Ennemy/GoomBaBP.GoomBaBP
 
 [MRU]
 MRUItem0=/Game/Map/MainMap1-1
@@ -1012,6 +1012,44 @@ Goomba_C.Default=True
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+GoomBaBP_C.Default=True
+GoomBaBP_C.Tick=True
+GoomBaBP_C.Character=True
+GoomBaBP_C.Camera=True
+GoomBaBP_C.Pawn=True
+GoomBaBP_C.Replication=True
+GoomBaBP_C.Rendering=True
+GoomBaBP_C.Collision=True
+GoomBaBP_C.Actor=True
+GoomBaBP_C.Input=True
+GoomBaBP_C.TransformCommon=True
+GoomBaBP_C.Sprite=True
+GoomBaBP_C.Physics=True
+GoomBaBP_C.Lighting=True
+GoomBaBP_C.Navigation=True
+GoomBaBP_C.VirtualTexture=True
+GoomBaBP_C.Tags=True
+GoomBaBP_C.Activation=True
+GoomBaBP_C.Cooking=True
+GoomBaBP_C.Character Movement (General Settings)=True
+GoomBaBP_C.Character Movement: Walking=True
+GoomBaBP_C.Character Movement: Jumping / Falling=True
+GoomBaBP_C.Character Movement (Networking)=True
+GoomBaBP_C.Character Movement: Swimming=True
+GoomBaBP_C.Character Movement: Flying=True
+GoomBaBP_C.Character Movement: Custom Movement=True
+GoomBaBP_C.Character Movement (Rotation Settings)=True
+GoomBaBP_C.Character Movement: Physics Interaction=True
+GoomBaBP_C.Character Movement=True
+GoomBaBP_C.Character Movement: Avoidance=True
+GoomBaBP_C.RootMotion=True
+GoomBaBP_C.Character Movement: NavMesh Movement=True
+GoomBaBP_C.NavMovement=True
+GoomBaBP_C.Velocity=True
+GoomBaBP_C.PlanarMovement=True
+GoomBaBP_C.MovementComponent=True
+GoomBaBP_C.Shape=True
+GoomBaBP_C.Materials=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1055,43 +1093,43 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Character/KillMaterial
+MRUItem0=/Game/Blueprints/Ennemy/GoomBaBP
 MRUItem1=/Game/Blueprints/Character/PunkBP
-MRUItem2=/Game/Blueprints/Character/CollisionCamera
-MRUItem3=/Game/Blueprints/Brique/ChampiBP
-MRUItem4=/Game/Blueprints/Brique/SpecialbriqueBP
-MRUItem5=/Game/Blueprints/Ennemy/Goomba
-MRUItem6=/Game/Blueprints/Ennemy/Ennemymaterial
-MRUItem7=/Game/Blueprints/Character/CameraDead
-MRUItem8=/Game/Blueprints/Brique/BriqueBP
-MRUItem9=/Game/Blueprints/Character/GrandBP
-MRUItem10=/Game/Blueprints/Character/CollisionBox
-MRUItem11=/Game/Blueprints/Brique/NewBlueprint
-MRUItem12=/Game/Map/1-1Map
-MRUItem13=/Game/Blueprints/Character/Test
-MRUItem14=/Game/Blueprints/Character/ChampiBP
-MRUItem15=/Game/Blueprints/TestBP
-MRUItem16=/Game/Blueprints/test
-MRUItem17=/Game/Blueprints/Character/NewBlueprint
-MRUItem18=/Game/Blueprints/Character/ReplacePunkBP
-MRUItem19=/Game/Blueprints/MainGameMode
+MRUItem2=/Game/Blueprints/Brique/BriqueBP
+MRUItem3=/Game/Blueprints/Camera/CollisionCamera
+MRUItem4=/Game/Blueprints/Brique/ChampiBP
+MRUItem5=/Game/Blueprints/Character/KillMaterial
+MRUItem6=/Game/Blueprints/Character/CollisionCamera
+MRUItem7=/Game/Blueprints/Brique/SpecialbriqueBP
+MRUItem8=/Game/Blueprints/Ennemy/Goomba
+MRUItem9=/Game/Blueprints/Ennemy/Ennemymaterial
+MRUItem10=/Game/Blueprints/Character/CameraDead
+MRUItem11=/Game/Blueprints/Character/GrandBP
+MRUItem12=/Game/Blueprints/Character/CollisionBox
+MRUItem13=/Game/Blueprints/Brique/NewBlueprint
+MRUItem14=/Game/Map/1-1Map
+MRUItem15=/Game/Blueprints/Character/Test
+MRUItem16=/Game/Blueprints/Character/ChampiBP
+MRUItem17=/Game/Blueprints/TestBP
+MRUItem18=/Game/Blueprints/test
+MRUItem19=/Game/Blueprints/Character/NewBlueprint
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Collision.BodyInstance\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
-BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BoxComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
-MovementComponent=
+MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
@@ -1103,12 +1141,13 @@ InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.Con
 SpecialbriqueBP_C=
 BriqueBP_C=
 ChampiBP_C=
-PaperCharacter="\"Object.GoombaBP\" "
-Character="\"Object.GoombaBP\" "
-Pawn="\"Object.GoombaBP\" "
-PunkBP_C="\"Object.GoombaBP\" "
+PaperCharacter=
+Character=
+Pawn=
+PunkBP_C=
 PaperFlipbookComponent="\"Object.Collision.BodyInstance\" "
-Goomba_C=
+Goomba_C="\"Object.Attack?\" "
+GoomBaBP_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Map/1-1Map.1-1Map=0
@@ -1132,8 +1171,11 @@ Goomba_C=
 /Game/Blueprints/Brique/ChampiBP.ChampiBP=0
 /Game/Blueprints/Ennemy/Ennemymaterial.Ennemymaterial=0
 /Game/Blueprints/Character/KillMaterial.KillMaterial=0
+/Game/Blueprints/Camera/CollisionCamera.CollisionCamera=0
+/Game/Blueprints/Ennemy/Goomba.Goomba=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Ennemy/GoomBaBP.GoomBaBP;
 RecentlyPlaced=/Game/Blueprints/Ennemy/Goomba.Goomba;
 RecentlyPlaced=/Game/Blueprints/Character/GrandBP.GrandBP;
 RecentlyPlaced=/Game/Blueprints/Brique/NewBlueprint.NewBlueprint;
@@ -1146,14 +1188,13 @@ RecentlyPlaced=/Game/Blueprints/Character/PunkBP.PunkBP;
 RecentlyPlaced=/Game/Blueprints/Character/ReplacePunkBP.ReplacePunkBP;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Blueprints/Character/Trigger.Trigger;
-RecentlyPlaced=/Game/Blueprints/Character/CollisionCamera.CollisionCamera;
-RecentlyPlaced=/Game/Blueprints/Character/CameraDead.CameraDead;
+RecentlyPlaced=/Game/Blueprints/Camera/CollisionCamera.CollisionCamera;
+RecentlyPlaced=/Game/Blueprints/Camera/CameraDead.CameraDead;
 RecentlyPlaced=/Game/Map/MarioBrosCamera.MarioBrosCamera;
 RecentlyPlaced=/Game/Blueprints/Character/NewBlueprint.NewBlueprint;
 RecentlyPlaced=/Game/Blueprints/Character/SmartCameraBis.SmartCameraBis;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/Character/CAME.CAME;
-RecentlyPlaced=/Game/Blueprints/Character/SmartCamera.SmartCamera;
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1207,8 +1248,8 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=6
 
 [RootWindow]
-ScreenPosition=X=150.400 Y=0.000
-WindowSize=X=1396.800 Y=808.000
+ScreenPosition=X=63.200 Y=0.000
+WindowSize=X=1400.000 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2208,9 +2249,9 @@ CollisionCamera_C=
 BriqueBP_C=
 PropertyWrapper=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-PunkBP_C=
+PunkBP_C=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-MovementComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+MovementComponent=
 SpecialbriqueBP_C=
 InterpToMovementComponent=
 CapsuleComponent=
@@ -2223,7 +2264,9 @@ StaticMeshComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.Constr
 TestBP_C=
 ChampiBP_C=
 CharacterMovementComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-Goomba_C=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+Goomba_C=
+BillboardComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+GoomBaBP_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2273,7 +2316,7 @@ StaticMeshComponent.Collision=False
 CapsuleComponent.Shape=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
