--- a/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1073,7 +1073,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Ennemy
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Brique
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1095,9 +1095,9 @@ GlobalAssetPicker.CurrentViewType=0
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Ennemy/GoomBaBP
 MRUItem1=/Game/Blueprints/Character/PunkBP
-MRUItem2=/Game/Blueprints/Brique/BriqueBP
-MRUItem3=/Game/Blueprints/Camera/CollisionCamera
-MRUItem4=/Game/Blueprints/Brique/ChampiBP
+MRUItem2=/Game/Blueprints/Brique/ChampiBP
+MRUItem3=/Game/Blueprints/Brique/BriqueBP
+MRUItem4=/Game/Blueprints/Camera/CollisionCamera
 MRUItem5=/Game/Blueprints/Character/KillMaterial
 MRUItem6=/Game/Blueprints/Character/CollisionCamera
 MRUItem7=/Game/Blueprints/Brique/SpecialbriqueBP
@@ -1119,27 +1119,27 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[1]\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-CapsuleComponent="\"Object.Collision.BodyInstance\" "
+CapsuleComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
-SpecialbriqueBP_C=
-BriqueBP_C=
+SpecialbriqueBP_C="\"Object.Hide?\" "
+BriqueBP_C="\"Object.Hide?\" "
 ChampiBP_C=
 PaperCharacter=
 Character=
@@ -1249,7 +1249,7 @@ CurrentScalingGridSize=6
 
 [RootWindow]
 ScreenPosition=X=63.200 Y=0.000
-WindowSize=X=1400.000 Y=808.000
+WindowSize=X=1403.200 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2249,7 +2249,7 @@ CollisionCamera_C=
 BriqueBP_C=
 PropertyWrapper=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-PunkBP_C=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+PunkBP_C=
 K2Node_VariableGet=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 MovementComponent=
 SpecialbriqueBP_C=
@@ -2266,7 +2266,7 @@ ChampiBP_C=
 CharacterMovementComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Goomba_C=
 BillboardComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-GoomBaBP_C=
+GoomBaBP_C=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
