--- a/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SuperPunkBros/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -84,7 +84,7 @@ LastExecutedPlayModeType=PlayMode_InEditorFloating
 LastLevel=/Game/Map/MainMap1-1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Character/PunkBP.PunkBP
 OpenAssetsAtExit=/Game/Blueprints/Ennemy/GoomBaBP.GoomBaBP
